@@ -16,13 +16,6 @@
  */
 package org.apache.dubbo.config;
 
-import demo.MultiClassLoaderService;
-import demo.MultiClassLoaderServiceImpl;
-import demo.MultiClassLoaderServiceRequest;
-import demo.MultiClassLoaderServiceResult;
-import javassist.CannotCompileException;
-import javassist.CtClass;
-import javassist.NotFoundException;
 import org.apache.dubbo.common.URL;
 import org.apache.dubbo.common.Version;
 import org.apache.dubbo.common.compiler.support.CtClassBuilder;
@@ -39,19 +32,30 @@ import org.apache.dubbo.config.bootstrap.DubboBootstrap;
 import org.apache.dubbo.config.context.ModuleConfigManager;
 import org.apache.dubbo.config.provider.impl.DemoServiceImpl;
 import org.apache.dubbo.registry.client.migration.MigrationInvoker;
-import org.apache.dubbo.rpc.Exporter;
 import org.apache.dubbo.rpc.Invoker;
+import org.apache.dubbo.rpc.Protocol;
 import org.apache.dubbo.rpc.ProxyFactory;
+import org.apache.dubbo.rpc.cluster.filter.FilterChainBuilder;
 import org.apache.dubbo.rpc.cluster.support.registry.ZoneAwareClusterInvoker;
 import org.apache.dubbo.rpc.cluster.support.wrapper.MockClusterInvoker;
+import org.apache.dubbo.rpc.cluster.support.wrapper.ScopeClusterInvoker;
 import org.apache.dubbo.rpc.listener.ListenerInvokerWrapper;
 import org.apache.dubbo.rpc.model.ApplicationModel;
 import org.apache.dubbo.rpc.model.FrameworkModel;
 import org.apache.dubbo.rpc.model.ModuleModel;
 import org.apache.dubbo.rpc.model.ServiceMetadata;
+import org.apache.dubbo.rpc.protocol.ReferenceCountInvokerWrapper;
 import org.apache.dubbo.rpc.protocol.injvm.InjvmInvoker;
 import org.apache.dubbo.rpc.protocol.injvm.InjvmProtocol;
 import org.apache.dubbo.rpc.service.GenericService;
+
+import demo.MultiClassLoaderService;
+import demo.MultiClassLoaderServiceImpl;
+import demo.MultiClassLoaderServiceRequest;
+import demo.MultiClassLoaderServiceResult;
+import javassist.CannotCompileException;
+import javassist.CtClass;
+import javassist.NotFoundException;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
@@ -83,13 +87,11 @@ import java.util.stream.Collectors;
 
 import static org.apache.dubbo.common.constants.CommonConstants.APPLICATION_KEY;
 import static org.apache.dubbo.common.constants.CommonConstants.APPLICATION_VERSION_KEY;
-import static org.apache.dubbo.common.constants.CommonConstants.BROADCAST_CLUSTER;
-import static org.apache.dubbo.common.constants.CommonConstants.CLUSTER_KEY;
 import static org.apache.dubbo.common.constants.CommonConstants.CONSUMER_SIDE;
 import static org.apache.dubbo.common.constants.CommonConstants.DEFAULT_METADATA_STORAGE_TYPE;
 import static org.apache.dubbo.common.constants.CommonConstants.DUBBO_VERSION_KEY;
 import static org.apache.dubbo.common.constants.CommonConstants.DUMP_DIRECTORY;
-import static org.apache.dubbo.common.constants.CommonConstants.GENERIC_KEY;
+import static org.apache.dubbo.common.constants.CommonConstants.EXPORTER_LISTENER_KEY;
 import static org.apache.dubbo.common.constants.CommonConstants.INTERFACE_KEY;
 import static org.apache.dubbo.common.constants.CommonConstants.LIVENESS_PROBE_KEY;
 import static org.apache.dubbo.common.constants.CommonConstants.METADATA_KEY;
@@ -116,12 +118,10 @@ import static org.apache.dubbo.registry.Constants.REGISTER_IP_KEY;
 import static org.apache.dubbo.rpc.Constants.DEFAULT_STUB_EVENT;
 import static org.apache.dubbo.rpc.Constants.LOCAL_KEY;
 import static org.apache.dubbo.rpc.Constants.LOCAL_PROTOCOL;
-import static org.apache.dubbo.rpc.Constants.SCOPE_KEY;
-import static org.apache.dubbo.rpc.Constants.SCOPE_LOCAL;
 import static org.apache.dubbo.rpc.Constants.SCOPE_REMOTE;
 import static org.apache.dubbo.rpc.cluster.Constants.PEER_KEY;
 
-public class ReferenceConfigTest {
+class ReferenceConfigTest {
     private static String zkUrl1;
     private static String zkUrl2;
     private static String registryUrl1;
@@ -152,7 +152,7 @@ public class ReferenceConfigTest {
      * Test whether the configuration required for the aggregation service reference meets expectations
      */
     @Test
-    public void testAppendConfig() {
+    void testAppendConfig() {
 
         ApplicationConfig applicationConfig = new ApplicationConfig();
         applicationConfig.setName("application1");
@@ -393,69 +393,7 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void testShouldJvmRefer() {
-
-        Map<String, String> parameters = new HashMap<>();
-
-        ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>();
-
-        // verify that if injvm is configured as true, local references should be made
-        referenceConfig.setInjvm(true);
-        Assertions.assertTrue(referenceConfig.shouldJvmRefer(parameters));
-
-        // verify that if injvm is configured as false, local references should not be made
-        referenceConfig.setInjvm(false);
-        Assertions.assertFalse(referenceConfig.shouldJvmRefer(parameters));
-
-        // verify that if url is configured, local reference should not be made
-        referenceConfig.setInjvm(null);
-        referenceConfig.setUrl("dubbo://127.0.0.1:20880/DemoService");
-        parameters.put(INTERFACE_KEY, DemoService.class.getName());
-        Assertions.assertFalse(referenceConfig.shouldJvmRefer(parameters));
-        parameters.clear();
-
-        // verify that if scope is configured as local, local references should be made
-        referenceConfig.setInjvm(null);
-        referenceConfig.setUrl(null);
-        parameters.put(SCOPE_KEY, SCOPE_LOCAL);
-        Assertions.assertTrue(referenceConfig.shouldJvmRefer(parameters));
-        parameters.clear();
-
-        // verify that if url protocol is configured as injvm, local references should be made
-        referenceConfig.setInjvm(null);
-        referenceConfig.setUrl(null);
-        parameters.put(LOCAL_PROTOCOL, "true");
-        Assertions.assertTrue(referenceConfig.shouldJvmRefer(parameters));
-        parameters.clear();
-
-        // verify that if generic is configured as true, local references should not be made
-        referenceConfig.setInjvm(null);
-        referenceConfig.setUrl(null);
-        parameters.put(GENERIC_KEY, "true");
-        Assertions.assertFalse(referenceConfig.shouldJvmRefer(parameters));
-        parameters.clear();
-
-        // verify that if the service has been exposed, and the cluster is not configured with broadcast, local reference should be made
-        referenceConfig.setInjvm(null);
-        referenceConfig.setUrl(null);
-        ProxyFactory proxy = ExtensionLoader.getExtensionLoader(ProxyFactory.class).getAdaptiveExtension();
-        DemoService service = new DemoServiceImpl();
-        URL url = URL.valueOf("dubbo://127.0.0.1/DemoService")
-            .addParameter(INTERFACE_KEY, DemoService.class.getName());
-        parameters.put(INTERFACE_KEY, DemoService.class.getName());
-        Exporter<?> exporter = InjvmProtocol.getInjvmProtocol(FrameworkModel.defaultModel()).export(proxy.getInvoker(service, DemoService.class, url));
-        InjvmProtocol.getInjvmProtocol(FrameworkModel.defaultModel()).getExporterMap().put(DemoService.class.getName(), exporter);
-        Assertions.assertTrue(referenceConfig.shouldJvmRefer(parameters));
-
-        // verify that if the service has been exposed, and the cluster is configured with broadcast, local reference should not be made
-        parameters.put(CLUSTER_KEY, BROADCAST_CLUSTER);
-        Assertions.assertFalse(referenceConfig.shouldJvmRefer(parameters));
-        parameters.clear();
-        InjvmProtocol.getInjvmProtocol(FrameworkModel.defaultModel()).destroy();
-    }
-
-    @Test
-    public void testCreateInvokerForLocalRefer() {
+    void testCreateInvokerForLocalRefer() {
 
         ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>();
         referenceConfig.setScope(LOCAL_KEY);
@@ -477,9 +415,26 @@ public class ReferenceConfigTest {
             .initialize();
 
         referenceConfig.init();
-        Invoker<?> withFilter = ((ListenerInvokerWrapper<?>) referenceConfig.getInvoker()).getInvoker();
-        withFilter = ((MockClusterInvoker<?>) withFilter).getDirectory().getAllInvokers().get(0);
-        Assertions.assertTrue(withFilter instanceof InjvmInvoker);
+        Assertions.assertTrue(referenceConfig.getInvoker() instanceof ScopeClusterInvoker);
+        ScopeClusterInvoker<?> scopeClusterInvoker = (ScopeClusterInvoker<?>) referenceConfig.getInvoker();
+        Invoker<?> mockInvoker = scopeClusterInvoker.getInvoker();
+        Assertions.assertTrue(mockInvoker instanceof MockClusterInvoker);
+        Invoker<?> withCount = ((MockClusterInvoker<?>) mockInvoker).getDirectory().getAllInvokers().get(0);
+
+        Assertions.assertTrue(withCount instanceof ReferenceCountInvokerWrapper);
+        Invoker<?> withFilter = ((ReferenceCountInvokerWrapper<?>) withCount).getInvoker();
+        Assertions.assertTrue(withFilter instanceof ListenerInvokerWrapper
+            || withFilter instanceof FilterChainBuilder.CallbackRegistrationInvoker);
+        if (withFilter instanceof ListenerInvokerWrapper) {
+            Assertions.assertTrue(((ListenerInvokerWrapper<?>) (((ReferenceCountInvokerWrapper<?>) withCount).getInvoker())).getInvoker() instanceof InjvmInvoker);
+        }
+        if (withFilter instanceof FilterChainBuilder.CallbackRegistrationInvoker) {
+            Invoker filterInvoker = ((FilterChainBuilder.CallbackRegistrationInvoker) withFilter).getFilterInvoker();
+            FilterChainBuilder.CopyOfFilterChainNode filterInvoker1 = (FilterChainBuilder.CopyOfFilterChainNode) filterInvoker;
+            ListenerInvokerWrapper originalInvoker = (ListenerInvokerWrapper) filterInvoker1.getOriginalInvoker();
+            Invoker invoker = originalInvoker.getInvoker();
+            Assertions.assertTrue(invoker instanceof InjvmInvoker);
+        }
         URL url = withFilter.getUrl();
         Assertions.assertEquals("application1", url.getParameter("application"));
         Assertions.assertEquals("value1", url.getParameter("key1"));
@@ -492,7 +447,7 @@ public class ReferenceConfigTest {
      * Verify the configuration of the registry protocol for remote reference
      */
     @Test
-    public void testCreateInvokerForRemoteRefer() {
+    void testCreateInvokerForRemoteRefer() {
 
         ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>();
         referenceConfig.setGeneric(Boolean.FALSE.toString());
@@ -537,7 +492,7 @@ public class ReferenceConfigTest {
      * Verify that the remote url is directly configured for remote reference
      */
     @Test
-    public void testCreateInvokerWithRemoteUrlForRemoteRefer() {
+    void testCreateInvokerWithRemoteUrlForRemoteRefer() {
 
         ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>();
         referenceConfig.setGeneric(Boolean.FALSE.toString());
@@ -568,8 +523,10 @@ public class ReferenceConfigTest {
             .initialize();
 
         referenceConfig.init();
-        Assertions.assertTrue(referenceConfig.getInvoker() instanceof MockClusterInvoker);
-        Assertions.assertEquals(Boolean.TRUE, referenceConfig.getInvoker().getUrl().getAttribute(PEER_KEY));
+        Assertions.assertTrue(referenceConfig.getInvoker() instanceof ScopeClusterInvoker);
+        Invoker scopeClusterInvoker = referenceConfig.getInvoker();
+        Assertions.assertTrue(((ScopeClusterInvoker) scopeClusterInvoker).getInvoker() instanceof MockClusterInvoker);
+        Assertions.assertEquals(Boolean.TRUE, ((ScopeClusterInvoker) scopeClusterInvoker).getInvoker().getUrl().getAttribute(PEER_KEY));
         dubboBootstrap.destroy();
 
     }
@@ -578,7 +535,7 @@ public class ReferenceConfigTest {
      * Verify that the registry url is directly configured for remote reference
      */
     @Test
-    public void testCreateInvokerWithRegistryUrlForRemoteRefer() {
+    void testCreateInvokerWithRegistryUrlForRemoteRefer() {
 
         ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>();
         referenceConfig.setGeneric(Boolean.FALSE.toString());
@@ -618,7 +575,7 @@ public class ReferenceConfigTest {
      * Verify the service reference of multiple registries
      */
     @Test
-    public void testMultipleRegistryForRemoteRefer() {
+    void testMultipleRegistryForRemoteRefer() {
         ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>();
         referenceConfig.setGeneric(Boolean.FALSE.toString());
         referenceConfig.setProtocol("dubbo");
@@ -712,7 +669,7 @@ public class ReferenceConfigTest {
      * unit test for dubbo-1765
      */
     @Test
-    public void test1ReferenceRetry() {
+    void test1ReferenceRetry() {
         ApplicationConfig application = new ApplicationConfig();
         application.setName("test-reference-retry");
         application.setEnableFileCache(false);
@@ -740,9 +697,11 @@ public class ReferenceConfigTest {
             System.setProperty("java.net.preferIPv4Stack", "true");
             ProxyFactory proxy = ExtensionLoader.getExtensionLoader(ProxyFactory.class).getAdaptiveExtension();
             DemoService service = new DemoServiceImpl();
-            URL url = URL.valueOf("dubbo://127.0.0.1/DemoService")
-                .addParameter(INTERFACE_KEY, DemoService.class.getName());
-            InjvmProtocol.getInjvmProtocol(FrameworkModel.defaultModel()).export(proxy.getInvoker(service, DemoService.class, url));
+            URL url = URL.valueOf("injvm://127.0.0.1/DemoService")
+                .addParameter(INTERFACE_KEY, DemoService.class.getName()).setScopeModel(ApplicationModel.defaultModel().getDefaultModule());
+            url = url.addParameter(EXPORTER_LISTENER_KEY, LOCAL_PROTOCOL);
+            Protocol protocolSPI = ApplicationModel.defaultModel().getExtensionLoader(Protocol.class).getAdaptiveExtension();
+            protocolSPI.export(proxy.getInvoker(service, DemoService.class, url));
             demoService = rc.get();
             success = true;
         } catch (Exception e) {
@@ -759,7 +718,7 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void test2ReferenceRetry() {
+    void test2ReferenceRetry() {
         ApplicationConfig application = new ApplicationConfig();
         application.setName("test-reference-retry2");
         application.setEnableFileCache(false);
@@ -810,7 +769,7 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void testMetaData() {
+    void testMetaData() {
         ReferenceConfig config = new ReferenceConfig();
         Map<String, String> metaData = config.getMetaData();
         Assertions.assertEquals(0, metaData.size(), "Expect empty metadata but found: " + metaData);
@@ -830,7 +789,7 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void testGetPrefixes() {
+    void testGetPrefixes() {
 
         ReferenceConfig referenceConfig = new ReferenceConfig();
         referenceConfig.setInterface(DemoService.class);
@@ -848,7 +807,7 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void testGenericAndInterfaceConflicts() {
+    void testGenericAndInterfaceConflicts() {
 
         ReferenceConfig referenceConfig = new ReferenceConfig();
         referenceConfig.setInterface(DemoService.class);
@@ -864,7 +823,7 @@ public class ReferenceConfigTest {
 
 
     @Test
-    public void testLargeReferences() throws InterruptedException {
+    void testLargeReferences() throws InterruptedException {
         int amount = 10000;
         ModuleConfigManager configManager = DubboBootstrap.getInstance().getApplicationModel().getDefaultModule().getConfigManager();
 
@@ -944,7 +903,7 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void testConstructWithReferenceAnnotation() throws NoSuchFieldException {
+    void testConstructWithReferenceAnnotation() throws NoSuchFieldException {
         Reference reference = getClass().getDeclaredField("innerTest").getAnnotation(Reference.class);
         ReferenceConfig referenceConfig = new ReferenceConfig(reference);
         Assertions.assertEquals(1, referenceConfig.getMethods().size());
@@ -962,11 +921,11 @@ public class ReferenceConfigTest {
     }
 
     @Test
-    public void testDifferentClassLoader() throws Exception {
+    void testDifferentClassLoader() throws Exception {
         ApplicationConfig applicationConfig = new ApplicationConfig("TestApp");
-        ApplicationModel applicationModel = new ApplicationModel(FrameworkModel.defaultModel());
+        ApplicationModel applicationModel = ApplicationModel.defaultModel();
         applicationModel.getApplicationConfigManager().setApplication(applicationConfig);
-        ModuleModel moduleModel = new ModuleModel(applicationModel);
+        ModuleModel moduleModel = applicationModel.newModule();
 
         DemoService demoService = new DemoServiceImpl();
         ServiceConfig<DemoService> serviceConfig = new ServiceConfig<>();
@@ -1036,6 +995,7 @@ public class ReferenceConfigTest {
     @Test
     @DisabledForJreRange(min = JRE.JAVA_16)
     public void testDifferentClassLoaderRequest() throws Exception {
+        FrameworkModel frameworkModel = FrameworkModel.defaultModel();
         String basePath = DemoService.class.getProtectionDomain().getCodeSource().getLocation().getFile();
         basePath = java.net.URLDecoder.decode(basePath, "UTF-8");
         ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
@@ -1044,9 +1004,9 @@ public class ReferenceConfigTest {
         TestClassLoader2 classLoader3 = new TestClassLoader2(classLoader2, basePath);
 
         ApplicationConfig applicationConfig = new ApplicationConfig("TestApp");
-        ApplicationModel applicationModel = new ApplicationModel(FrameworkModel.defaultModel());
+        ApplicationModel applicationModel = frameworkModel.newApplication();
         applicationModel.getApplicationConfigManager().setApplication(applicationConfig);
-        ModuleModel moduleModel = new ModuleModel(applicationModel);
+        ModuleModel moduleModel = applicationModel.newModule();
 
         Class<?> clazz1 = classLoader1.loadClass(MultiClassLoaderService.class.getName(), false);
         Class<?> clazz1impl = classLoader1.loadClass(MultiClassLoaderServiceImpl.class.getName(), false);
@@ -1056,7 +1016,7 @@ public class ReferenceConfigTest {
         classLoader1.loadedClass.put(resultClazzCustom1.getName(), resultClazzCustom1);
         AtomicReference innerRequestReference = new AtomicReference();
         AtomicReference innerResultReference = new AtomicReference();
-        innerResultReference.set(resultClazzCustom1.newInstance());
+        innerResultReference.set(resultClazzCustom1.getDeclaredConstructor().newInstance());
         Constructor<?> declaredConstructor = clazz1impl.getDeclaredConstructor(AtomicReference.class, AtomicReference.class);
 
         ServiceConfig serviceConfig = new ServiceConfig<>();
@@ -1084,16 +1044,54 @@ public class ReferenceConfigTest {
 
         java.lang.reflect.Method callBean1 = object1.getClass().getDeclaredMethod("call", requestClazzOrigin);
         callBean1.setAccessible(true);
-        Object result1 = callBean1.invoke(object1, requestClazzCustom2.newInstance());
+        Object result1 = callBean1.invoke(object1, requestClazzCustom2.getDeclaredConstructor().newInstance());
 
         Assertions.assertEquals(resultClazzCustom3, result1.getClass());
         Assertions.assertNotEquals(classLoader2, result1.getClass().getClassLoader());
         Assertions.assertEquals(classLoader1, innerRequestReference.get().getClass().getClassLoader());
 
+        Thread.currentThread().setContextClassLoader(classLoader1);
+        callBean1.invoke(object1, requestClazzCustom2.getDeclaredConstructor().newInstance());
+        Assertions.assertEquals(classLoader1, Thread.currentThread().getContextClassLoader());
+
         applicationModel.destroy();
         DubboBootstrap.getInstance().destroy();
         Thread.currentThread().setContextClassLoader(classLoader);
         Thread.currentThread().getContextClassLoader().loadClass(DemoService.class.getName());
+    }
+
+    @Test
+    void testClassLoader() {
+        FrameworkModel frameworkModel = new FrameworkModel();
+        ApplicationModel applicationModel = frameworkModel.newApplication();
+        applicationModel.getApplicationConfigManager().setApplication(new ApplicationConfig("Test"));
+
+        ClassLoader originClassLoader = Thread.currentThread().getContextClassLoader();
+        ClassLoader classLoader = new ClassLoader(originClassLoader) {
+        };
+        Thread.currentThread().setContextClassLoader(classLoader);
+
+        ServiceConfig<DemoService> serviceConfig = new ServiceConfig<>(applicationModel.newModule());
+        serviceConfig.setInterface(DemoService.class);
+        serviceConfig.setProtocol(new ProtocolConfig("dubbo", -1));
+        serviceConfig.setRegistry(new RegistryConfig("N/A"));
+        serviceConfig.setRef(new DemoServiceImpl());
+        serviceConfig.export();
+
+        ReferenceConfig<DemoService> referenceConfig = new ReferenceConfig<>(applicationModel.newModule());
+        referenceConfig.setInterface(DemoService.class);
+        referenceConfig.setRegistry(new RegistryConfig("N/A"));
+        DemoService demoService = referenceConfig.get();
+
+        demoService.sayName("Dubbo");
+        Assertions.assertEquals(classLoader, Thread.currentThread().getContextClassLoader());
+
+        Thread.currentThread().setContextClassLoader(null);
+        demoService.sayName("Dubbo");
+        Assertions.assertNull(Thread.currentThread().getContextClassLoader());
+
+        Thread.currentThread().setContextClassLoader(originClassLoader);
+        frameworkModel.destroy();
     }
 
     private Class<?> compileCustomRequest(ClassLoader classLoader) throws NotFoundException, CannotCompileException {
